--- a/lab-creation/lab-manifests/sso.yaml
+++ b/lab-creation/lab-manifests/sso.yaml
@@ -66,7 +66,7 @@ spec:
       realm: openshift
   user:
     username: lab-admin
-    firstName: lab-admmin
+    firstName: lab-admin
     lastName: StarterKit
     email: lab-admin@example.com
     enabled: true
