Update NGINX configuration

--- a/resources/nginx/nginx.conf
+++ b/resources/nginx/nginx.conf
@@ -49,6 +49,8 @@ http {
 
         location / {
         }
+        location /aaa {
+        }       
         location /stub_status {
             stub_status;
         }
