--- a/resources/nginx/nginx-cfg/default.conf
+++ b/resources/nginx/nginx-cfg/default.conf
@@ -1,6 +1,6 @@
 server {
 	listen       8080;
-	server_name  localhost2;
+	server_name  localhost;
 	root         /opt/app-root/src;
-	index        index2.html;
+	index        index.html;
 }
